testdata/grammars/bad/e_not_alone_1.grammar
# Badly-formed grammar with an e-production containing another nonterminal.

E      : E `+` T | T
T      : T `*` F | F | e F
F      : `(` E `)` | Digits
Digits : `(0|1|2|3|4|5|6|7|8|9)(0|1|2|3|4|5|6|7|8|9)*`
